--- a/tex/sections/1-intro.tex
+++ b/tex/sections/1-intro.tex
@@ -14,7 +14,7 @@ As each object then corresponds to one observation, this opens up a connection t
 
 When analyzing the geometry of objects, differences in location, rotation, and size are often not of interest.
 Instead, the focus lies purely on their differences in  \textit{shape}, a widely adapted definition of which was established by \cite{Kendall1977} and which might be formulated in the following way: \textquote[{\parencite[1]{DrydenMardia2016}}]{\textins*{A}ll the geometrical information that remains when location, scale and rotational effects are removed from an object}.
-This is illustrated in Figure \ref{fig:1-eucl}, where the same shape of a handwritten digit \enquote*{3} is plotted in three different orientations and sizes.
+This is illustrated in \cref{fig:1-eucl}, where the same shape of a handwritten digit \enquote*{3} is plotted in three different orientations and sizes.
 \begin{figure}
   \centering
   \begin{subfigure}{.48\textwidth}
@@ -29,11 +29,11 @@ This is illustrated in Figure \ref{fig:1-eucl}, where the same shape of a handwr
     \caption{Original (left) and re-parameterized digit (right; $t \mapsto t^5$). Color indicates the value of the parametrization $t \in [0,1]$ at point $\beta(t)$.}
     \label{fig:1-warp}
   \end{subfigure}
-  \caption{Several representations of the same shape. Data:\ \texttt{digits3.dat} from the \texttt{shapes} package \parencite{shapes} for the \texttt{R} programming language \parencite{R} with smoothing applied using methods discussed in Appendix \ref{app:a-smooth}. Original dataset collected by \cite{Anderson1997}.}
+  \caption{Several representations of the same shape. Data:\ \texttt{digits3.dat} from the \texttt{shapes} package \parencite{shapes} for the \texttt{R} programming language \parencite{R} with smoothing applied using methods discussed in \cref{app:a-smooth}. Original dataset collected by \cite{Anderson1997}.}
   \label{fig:1-shape}
 \end{figure}
 When considering the shape of a curve $\beta : [0,1] \rightarrow \mathbb{R}^d$, one has to additionally take into account effects relating to the parametrization $t \in [0,1]$.
-As illustrated in Figure \ref{fig:1-warp}, curves $\beta(t)$ and $\beta(\gamma(t))$, with some re-parametrization or \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$ monotonically increasing and differentiable, have the same image and therefore represent the same shape as well.
+As illustrated in \cref{fig:1-warp}, curves $\beta(t)$ and $\beta(\gamma(t))$, with some re-parametrization or \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$ monotonically increasing and differentiable, have the same image and therefore represent the same shape as well.
 
 A pre-requisite for any statistical analysis of shape is the ability to calculate a distance between and to estimate a mean from observations, in a fashion that does not depend on location, rotation, scale and/or parametrization of the input.
 In this thesis two established approaches to shape analysis will be combined:
@@ -43,7 +43,7 @@ Taken together, both approaches allow for analyzing curves in a fashion that is 
 As the full Procrustes mean has particularly nice properties in two dimensions, when identifying $\mathbb{R}^2$ with $\mathbb{C}$ \parencite[see][Chap.\ 8]{DrydenMardia2016}, this thesis will be restricted to the case of planar curves.
 
 While we are interested in modelling a (planar) object's geometrical information as a continous curve $\beta : [0,1] \rightarrow \mathbb{R}^2$, the curve itself is usually only observed as a discrete set of points $\beta(t_1), \beta(t_2), \dots, \beta(t_m)$.
-As shown on the left side of Figure \ref{fig:1-sparse} this is no problem when the number $m$ of observed points is high and the whole length of the curve is densly observed, as we can easily interpolate $\beta(t)$ for any $t \in [0,1]$.
+As shown on the left side of \cref{fig:1-sparse} this is no problem when the number $m$ of observed points is high and the whole length of the curve is densly observed, as we can easily interpolate $\beta(t)$ for any $t \in [0,1]$.
 \begin{figure}
   \centering
   \begin{subfigure}{.48\textwidth}
@@ -54,7 +54,7 @@ As shown on the left side of Figure \ref{fig:1-sparse} this is no problem when t
     \centering
     \inputTikz{1-sparse}
   \end{subfigure}
-  \caption{Dense (left) and sparse (right) observations of the same three digits. Data: see Figure \ref{fig:1-shape}, with the smooth curves sampled on a dense (left) and sparse (right) grid.}
+  \caption{Dense (left) and sparse (right) observations of the same three digits. Data: see \cref{fig:1-shape}, with the smooth curves sampled on a dense (left) and sparse (right) grid.}
   \label{fig:1-sparse}
 \end{figure}
 However, in cases where $\beta$ is only observed over a small number of points (right side) and where the density and position of observed points may even vary between different curves---a setting known as \emph{sparse} and \emph{irregular}---more sophisticated smoothing techniques have to be applied.
@@ -63,7 +63,7 @@ On the other hand, as will be shown, the estimation of the \emph{elastic full Pr
 This offers an advantage, as we can then make use of established smoothing techniques for the estimation of covariance surfaces in the sparse and irregular setting.
 Here, in particular \cite{CederbaumScheiplGreven2018} offers a method for efficient covariance smoothing using \emph{tensor product p-splines} \parencite[see e.g.][Chap. 8.2]{FahrmeierEtAl2013}.
 
-The aim of this thesis, as illustrated in Figure \ref{fig:1-mean}, is to extend existing methods for elastic mean estimation of sparse and irregularly sampled curves, as proposed by \cite{Steyer2021} and implemented in the package \texttt{elasdics} \parencite{elasdics} for the \texttt{R} programming language \parencite{R}, to also include invariance with respect to rotation and scaling.
+The aim of this thesis, as illustrated in \cref{fig:1-mean}, is to extend existing methods for elastic mean estimation of sparse and irregularly sampled curves, as proposed by \cite{Steyer2021} and implemented in the package \texttt{elasdics} \parencite{elasdics} for the \texttt{R} programming language \parencite{R}, to also include invariance with respect to rotation and scaling.
 \begin{figure}
   \centering
   \begin{subfigure}{.48\textwidth}
@@ -82,10 +82,9 @@ Here, techniques for hermitian smoothing of the complex covariance surfaces as a
 
 
 The thesis is organized as follows.
-In Section \ref{sec:2} relevant background material is reviewed and the elastic full Procrustes mean is derived, in the case where curves $\beta:[0,1] \rightarrow \mathbb{R}^2$ are fully observed. 
-In Section \ref{sec:3} an estimation procedure for the setting of sparse and irregularly observed curves $\beta(t_1), \dots, \beta(t_m)$ is proposed, concluding the theoretical part of this thesis.
-In Section \ref{sec:4} the proposed methods will be verified and applied using simulated and empirical datasets.
-Finally, all results will be summarized in Section \ref{sec:5}.
-Appendix \ref{app:a} and Supplements \ref{app:b} offer additional considerations and some reproducability guidelines.
+In \cref{sec:2} relevant background material is reviewed and the elastic full Procrustes mean is derived, in the case where curves $\beta:[0,1] \rightarrow \mathbb{R}^2$ are fully observed. 
+In \cref{sec:3} an estimation procedure for the setting of sparse and irregularly observed curves $\beta(t_1), \dots, \beta(t_m)$ is proposed, concluding the theoretical part of this thesis.
+In \cref{sec:4} the proposed methods will be verified and applied using simulated and empirical datasets.
+Finally, all results will be summarized in \cref{sec:5}.
+\cref{app:a} and \cref{app:b} offer additional considerations and some reproducability guidelines.
 
-\newpage
