--- a/tex/references.bib
+++ b/tex/references.bib
@@ -72,6 +72,22 @@
   volume    = {37},
   pages     = {81-91}
 }
+@Article{Redd2012,
+  author    = {Redd, A.},
+  title     = {A comment on the orthogonalization of B-spline basis functions and their derivatives},
+  year      = {2012},
+  journal   = {Stat Comput},
+  volume    = {22},
+  pages     = {251-257}
+}
+@Article{ReissXu2020,
+  author    = {Reiss, P. T. and Xu, Meng},
+  title     = {Tensor product splines and functional principal components},
+  year      = {2020},
+  journal   = {Journal of Statistical Planning and Inference},
+  volume    = {208},
+  pages     = {1-12}
+}
 @article{SrivastavaEtAl2011,
   author = {A. {Srivastava} and E. P. {Klassen} and S. H. {Joshi} and I. H. {Jermyn}},
   title = {Shape Analysis of Elastic Curves in Euclidean Spaces},
@@ -97,9 +113,8 @@
   primaryClass={stat.ME}
 }
 @Misc{Stoecker2021,
-  author = {Stöcker, A and Greven, S.},
-  title = {Functional additive regression on shape and form manifolds of planar
-      curves},
+  author = {Stöcker, A. and Greven, S.},
+  title = {Functional additive regression on shape and form manifolds of planar curves},
   year = 2021,
   eprint={2109.02624},
   archivePrefix={arXiv},
@@ -127,6 +142,13 @@
   year = {2021},
   note = {R package version 0.1.1},
   url = {https://CRAN.R-project.org/package=elasdics},
+}
+@Manual{orthogonalsplinebasis,
+  title = {orthogonalsplinebasis: Orthogonal B-Spline Basis Functions},
+  author = {A. Redd},
+  year = {2015},
+  note = {R package version 0.1.6},
+  url = {https://CRAN.R-project.org/package=orthogonalsplinebasis},
 }
 @Manual{R,
     title = {R: A Language and Environment for Statistical Computing},
