--- a/tex/sections/a-appendix.tex
+++ b/tex/sections/a-appendix.tex
@@ -1,6 +1,6 @@
 \label{app:a}
 
-\section{Proofs and Derivations}
+\section{Additional Proofs and Derivations}
 \label{app:a-deriv}
 
 \subsection{Derivation of Lemma \ref{lem:2-fpdist}}
